<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/curved_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RadioButton
            android:id="@+id/radioCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cds" />

        <RadioButton
            android:id="@+id/radioLoans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loans" />

        <RadioButton
            android:id="@+id/radioCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checking_account" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup">

        <LinearLayout
            android:id="@+id/accountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/textAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/account_number_txt" />

            <EditText
                android:id="@+id/editAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account_number"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/initialBalanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/textInitialBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/initial_balance_txt" />

            <EditText
                android:id="@+id/editInitialBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/initial_bal"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currentBalanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/textCurrentBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/current_balance_txt" />

            <EditText
                android:id="@+id/editCurrentBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/current_balance"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interestRateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/interest_rate_txt" />

            <EditText
                android:id="@+id/editInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/interest_rate"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/textPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/payment_txt" />

            <EditText
                android:id="@+id/editPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/payment"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>